--- a/50_spring-boot/400_websocket/src/main/resources/static/6_sockjs.html
+++ b/50_spring-boot/400_websocket/src/main/resources/static/6_sockjs.html
@@ -33,10 +33,11 @@
     </div>
 </div>
 
-<script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/sockjs-client/sockjs.min.js"></script>
-<script src="/webjars/stomp-websocket/stomp.min.js"></script>
+<script src="jquery.js"></script>
+<script src="sockjs.min.js"></script>
+<script src="stomp.min.js"></script>
 <script type="text/javascript">
+
     var stompClient = null;
 
     function setConnected(connected) {
@@ -47,7 +48,7 @@
     }
 	
     function connect() {
-        var socket = new SockJS('http://127.0.0.1:15674/ws'); //链接SockJS 的endpoint 名称为"/endpointWisely"
+        var socket = new SockJS('http://127.0.0.1:15670/stomp');
         stompClient = Stomp.over(socket);//使用stomp子协议的WebSocket 客户端
         stompClient.connect({}, function(frame) {//链接Web Socket的服务端。
             setConnected(true);
