--- a/50_spring-boot/400_websocket/src/main/resources/static/6_stomp.html
+++ b/50_spring-boot/400_websocket/src/main/resources/static/6_stomp.html
@@ -38,16 +38,6 @@
 <script src="stomp.min.js"></script>
 <script type="text/javascript">
 
-    var ws = new WebSocket('ws://localhost:15674/ws');
-    var client = Stomp.over(ws);
-    var on_connect = function() {
-        console.log('connected');
-    };
-    var on_error =   function() {
-        console.log('error');
-    };
-    client.connect('guest','guest',on_connect,on_error,'/');
-
     var stompClient = null;
 
     function setConnected(connected) {
@@ -58,9 +48,9 @@
     }
 	
     function connect() {
-        var socket = new SockJS('http://127.0.0.1:15674/ws');
+        var socket = new SockJS('http://127.0.0.1:9000/chathost');
         stompClient = Stomp.over(socket);//使用stomp子协议的WebSocket 客户端
-        stompClient.connect({}, function(frame) {//链接Web Socket的服务端。
+        stompClient.connect('admin','admin', function(frame) {
             setConnected(true);
             //同步
             stompClient.subscribe('/topic1/welcome', function(respnose){
